[gd_scene load_steps=24 format=3 uid="uid://dvgn31hw0pdtf"]

[ext_resource type="Texture2D" uid="uid://mx7uqftr273i" path="res://assets/icons/Copy.png" id="1_kyu4h"]
[ext_resource type="Script" path="res://scripts/editor/node_editor.gd" id="1_rivm0"]
[ext_resource type="Texture2D" uid="uid://c0ipcd20y2552" path="res://assets/icons/Info.png" id="2_ujkkt"]
[ext_resource type="Texture2D" uid="uid://c8l5mwpvsnsdj" path="res://assets/icons/Resize.png" id="3_0bbys"]
[ext_resource type="Shader" path="res://assets/shaders/obj_select.gdshader" id="3_813i8"]
[ext_resource type="Script" path="res://scripts/editor/node_button.gd" id="4_celo7"]
[ext_resource type="Texture2D" uid="uid://cxtubwqkn2fhk" path="res://assets/icons/Trash.png" id="4_eqyul"]
[ext_resource type="Texture2D" uid="uid://cyx8ag10fbdem" path="res://assets/icons/Rotate.png" id="6_lxbl4"]
[ext_resource type="Script" path="res://scripts/editor/selection_box.gd" id="6_yua7w"]
[ext_resource type="Shader" path="res://assets/shaders/grid.gdshader" id="7_4p2lq"]
[ext_resource type="Texture2D" uid="uid://bibqq0086tmwu" path="res://assets/icons/Pause.png" id="8_0aihf"]
[ext_resource type="Texture2D" uid="uid://bjbp0x88g2fge" path="res://assets/icons/Grid.png" id="8_7dv7m"]
[ext_resource type="Texture2D" uid="uid://bpo36mtgmaj1i" path="res://assets/icons/Leave.png" id="8_d1q4l"]
[ext_resource type="Texture2D" uid="uid://gti58spvrnpl" path="res://assets/icons/Play.png" id="8_flewc"]
[ext_resource type="Texture2D" uid="uid://c0ch34sadcjfi" path="res://assets/icons/Save.png" id="10_rwrf8"]
[ext_resource type="Texture2D" uid="uid://dm2k4v5xtr54a" path="res://assets/icons/Drag.png" id="10_tnt2h"]
[ext_resource type="Texture2D" uid="uid://cvvdbxqsntce4" path="res://assets/icons/Select.png" id="11_0yhnq"]
[ext_resource type="Texture2D" uid="uid://dcdgij4bgejfd" path="res://assets/icons/More.png" id="11_n740k"]
[ext_resource type="Texture2D" uid="uid://blaetnobp0mmu" path="res://assets/icons/Edit.png" id="15_s77gr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2w5jh"]
shader = ExtResource("3_813i8")
shader_parameter/dash_size = 8.0
shader_parameter/dash_speed = 32.0
shader_parameter/line_width = 4.0
shader_parameter/pos = Vector2(0, 0)
shader_parameter/end = Vector2(200, 200)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mltie"]
shader = ExtResource("7_4p2lq")
shader_parameter/cell_size = Vector2(64, 64)
shader_parameter/offset = Vector2(31, 31)
shader_parameter/width = 2
shader_parameter/color = Color(0, 0, 0, 0.47451)

[sub_resource type="Gradient" id="Gradient_x0ble"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2q3qt"]
gradient = SubResource("Gradient_x0ble")

[node name="NodeEditor" type="Node2D"]
z_index = 9
script = ExtResource("1_rivm0")

[node name="Line" type="Line2D" parent="."]
material = SubResource("ShaderMaterial_2w5jh")
width = 4.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Info" type="Sprite2D" parent="."]
position = Vector2(-192, 232)
scale = Vector2(0.597015, 0.597015)
texture = ExtResource("2_ujkkt")

[node name="Grid" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_mltie")
scale = Vector2(11.125, 20.75)
texture = SubResource("GradientTexture2D_2q3qt")
offset = Vector2(32, 32)

[node name="UI" type="CanvasLayer" parent="."]

[node name="PauseButton" type="Button" parent="UI" groups=["EditorHide"]]
visible = false
custom_minimum_size = Vector2(64, 64)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_bottom = 66.0
grow_horizontal = 0
icon = ExtResource("8_0aihf")
icon_alignment = 1
expand_icon = true

[node name="SelectionBox" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -456.0
offset_top = 424.0
offset_right = -313.0
offset_bottom = 593.0
mouse_filter = 1
script = ExtResource("6_yua7w")

[node name="DraggyThingies" type="Control" parent="UI/SelectionBox"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 456.0
offset_top = -424.0
offset_right = 496.0
offset_bottom = -384.0

[node name="ButtonThingies" type="Control" parent="UI/SelectionBox"]
anchors_preset = 0
offset_right = 352.0
offset_bottom = 249.0
mouse_filter = 2

[node name="Resize" type="Control" parent="UI/SelectionBox/ButtonThingies"]
z_index = 9
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 52.0
offset_bottom = 52.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 12
script = ExtResource("4_celo7")
type = 1

[node name="Resize" type="Sprite2D" parent="UI/SelectionBox/ButtonThingies/Resize"]
texture = ExtResource("3_0bbys")
offset = Vector2(26, 26)

[node name="Rotate" type="Control" parent="UI/SelectionBox/ButtonThingies"]
unique_name_in_owner = true
z_index = 9
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = -52.0
offset_right = 52.0
grow_horizontal = 0
script = ExtResource("4_celo7")
type = 2

[node name="Rotate" type="Sprite2D" parent="UI/SelectionBox/ButtonThingies/Rotate"]
texture = ExtResource("6_lxbl4")
offset = Vector2(26, 26)

[node name="Trash" type="Control" parent="UI/SelectionBox/ButtonThingies"]
z_index = 9
layout_mode = 1
anchors_preset = 0
offset_left = -52.0
offset_top = -52.0
script = ExtResource("4_celo7")
type = 4

[node name="Trash" type="Sprite2D" parent="UI/SelectionBox/ButtonThingies/Trash"]
texture = ExtResource("4_eqyul")
offset = Vector2(26, 26)

[node name="Copy" type="Control" parent="UI/SelectionBox/ButtonThingies"]
z_index = 9
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_bottom = 52.0
grow_vertical = 0
mouse_filter = 1
script = ExtResource("4_celo7")
type = 5

[node name="Copy" type="Sprite2D" parent="UI/SelectionBox/ButtonThingies/Copy"]
texture = ExtResource("1_kyu4h")
offset = Vector2(26, 26)

[node name="Bottom" type="Control" parent="UI"]
custom_minimum_size = Vector2(0, 68)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="Panel" type="Panel" parent="UI/Bottom" groups=["EditorHide"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="VFlowContainer" parent="UI/Bottom" groups=["EditorHide"]]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -33.5
offset_right = 131.0
offset_bottom = 33.5
grow_vertical = 2
mouse_filter = 0
alignment = 1

[node name="LeaveButton" type="Button" parent="UI/Bottom/Left" groups=["EditorHide"]]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
icon = ExtResource("8_d1q4l")
icon_alignment = 1
expand_icon = true

[node name="MoreButton" type="Button" parent="UI/Bottom/Left" groups=["EditorHide"]]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
icon = ExtResource("11_n740k")
icon_alignment = 1
expand_icon = true

[node name="GridButton" type="Button" parent="UI/Bottom/Left" groups=["EditorHide"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
icon = ExtResource("8_7dv7m")
expand_icon = true

[node name="EditButton" type="Button" parent="UI/Bottom/Left" groups=["EditorHide"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true
icon = ExtResource("15_s77gr")
icon_alignment = 1
expand_icon = true

[node name="Center" type="VFlowContainer" parent="UI/Bottom" groups=["EditorHide"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -33.0
offset_right = 30.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
alignment = 1

[node name="PlayButton" type="Button" parent="UI/Bottom/Center" groups=["EditorHide"]]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
icon = ExtResource("8_flewc")
icon_alignment = 1
expand_icon = true

[node name="Right" type="VFlowContainer" parent="UI/Bottom" groups=["EditorHide"]]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 0
alignment = 1

[node name="DragButton" type="Button" parent="UI/Bottom/Right" groups=["EditorHide"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("10_tnt2h")
icon_alignment = 1
expand_icon = true

[node name="SelectButton" type="Button" parent="UI/Bottom/Right" groups=["EditorHide"]]
unique_name_in_owner = true
modulate = Color(0.2, 0.2, 0.2, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("11_0yhnq")
icon_alignment = 1
expand_icon = true

[node name="PlaceButton" type="Button" parent="UI/Bottom/Right" groups=["EditorHide"]]
unique_name_in_owner = true
modulate = Color(0.2, 0.2, 0.2, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2

[node name="ObjectsButton" type="Button" parent="UI/Bottom/Right" groups=["EditorHide"]]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
icon = ExtResource("11_n740k")
icon_alignment = 1
expand_icon = true

[node name="SaveDialogue" type="Control" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveDialogueExit" type="Control" parent="UI/SaveDialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SavePanel" type="Panel" parent="UI/SaveDialogue"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -205.0
offset_right = -40.0
offset_bottom = -100.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SaveDialogue/SavePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HFlowContainer" type="HFlowContainer" parent="UI/SaveDialogue/SavePanel/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer" groups=["EditorHide"]]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
icon = ExtResource("10_rwrf8")
expand_icon = true

[node name="Name" type="LineEdit" parent="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Level Name"

[node name="HFlowContainer2" type="HFlowContainer" parent="UI/SaveDialogue/SavePanel/VBoxContainer"]
layout_mode = 2

[node name="PersistButton" type="CheckButton" parent="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Persist:"

[node name="HFlowContainer" type="HFlowContainer" parent="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer2/HFlowContainer"]
layout_mode = 2
text = "Ball Count:"

[node name="BallCount" type="HSlider" parent="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer2/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="BallCountLabel" type="Label" parent="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer2/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[connection signal="pressed" from="UI/PauseButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Left/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Left/MoreButton" to="." method="_on_more_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Left/GridButton" to="." method="_on_grid_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Left/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Center/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Right/DragButton" to="." method="_on_drag_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Right/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Right/PlaceButton" to="." method="_on_place_button_pressed"]
[connection signal="pressed" from="UI/Bottom/Right/ObjectsButton" to="." method="_on_objects_button_pressed"]
[connection signal="gui_input" from="UI/SaveDialogue/SaveDialogueExit" to="." method="_on_save_dialogue_exit_gui_input"]
[connection signal="pressed" from="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="text_changed" from="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer/Name" to="." method="_on_name_text_changed"]
[connection signal="text_submitted" from="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer/Name" to="." method="_on_name_text_submitted"]
[connection signal="toggled" from="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer2/PersistButton" to="." method="_on_persist_button_toggled"]
[connection signal="value_changed" from="UI/SaveDialogue/SavePanel/VBoxContainer/HFlowContainer2/HFlowContainer/BallCount" to="." method="_on_ball_count_value_changed"]
